Issue #6 Alert text alignment over multiple lines 2

--- a/style/alerts.css
+++ b/style/alerts.css
@@ -45,3 +45,6 @@
     padding-left:70px;
     text-indent:-48px;
 }
+.rtl .alertmessage {
+    padding-right:70px;
+}
